--- a/client/src/App.css
+++ b/client/src/App.css
@@ -74,6 +74,7 @@ a{
   background: #24A5F5;
   width:max(8%,100px);
   padding: 0.5% 0%;
+  margin: 0.3rem 0.1rem;
   font-size: 18px;
   font-family: Arial, Helvetica, sans-serif;
   color:white;
@@ -91,9 +92,10 @@ a{
   text-align:center;
 }
 .raise-blinds{
-  display:flex;
+  white-space: nowrap;
+  /*display:flex;
   flex-flow: row wrap;
-  align-items:center;
+  align-items:center;*/
 }
 #enter-name{
   width:max(10%,150px);
@@ -116,7 +118,7 @@ a{
     display:block;
     text-align:right;
     border-radius:40px;
-    width:max(35%,300px);
+    width:max(30%,300px);
     padding:10px;
     position:relative;
     left:10%;
