--- a/client/src/App.css
+++ b/client/src/App.css
@@ -33,6 +33,9 @@ a{
   width:15rem;
   flex-direction: column;
 }
+.player-timer{
+  margin: 0 auto;
+}
 .player-info{
   color:white;
   text-align: center;
@@ -140,6 +143,7 @@ a{
 }
 .lobby-link{
   display:flex;
+  margin: 0 auto;
 }
 .decision-button{
   border-radius: 40px;
@@ -151,6 +155,19 @@ a{
   font-size: 18px;
   font-family: Arial, Helvetica, sans-serif;
   color:white;
+}
+.progress{
+  background-color:#24A5F5;
+  height:4px;
+  border-radius: 1rem;
+  transition-delay: 0.1s;
+
+}
+.progress-div{
+  background-color:white;
+  border-radius: .5rem;
+  transition: 0.5s ease;
+  margin: 5px 0px;
 }
 #enter-name{
   width:max(10%,150px);
@@ -180,7 +197,7 @@ a{
   border: none;
   background: #3A3B3C;
   padding: 0.5% 0%;
-  margin: 0em 28em;
+  margin: 0em 32vw;
   font-size: 26px;
   font-family: Arial, Helvetica, sans-serif;
   color:white;
