--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,6 @@
+html, main, #root{
+  height:100%;
+}
 h1{
   border-bottom:none;
   margin-block-start: 0em;
@@ -5,6 +8,7 @@ h1{
 }
 body{
   background-color:#18191a;
+  height:100%;
 }
 label{
   border-radius: 10px;
@@ -47,6 +51,9 @@ button:focus {
   text-align: center;
   background-color:#24A5F5;
   border-radius: 1rem;
+}
+.player-info-text{
+  margin: 0 2rem;
 }
 .player-info p{
   margin: 0 auto 0.1rem;
@@ -151,23 +158,11 @@ button:focus {
   display:flex;
   margin: 0 auto;
 }
-.decision-button{
-  border-radius: 40px;
-  border: none;
-  background: #24A5F5;
-  width:max(5%,60px);
-  padding: 0.2rem 0.2rem;
-  margin: 0.3rem 0.1rem;
-  font-size: 18px;
-  font-family: Arial, Helvetica, sans-serif;
-  color:white;
-}
 .progress{
   background-color:#24A5F5;
   height:4px;
   border-radius: 1rem;
   transition-delay: 0.1s;
-
 }
 .progress-div{
   background-color:white;
@@ -179,9 +174,71 @@ button:focus {
   position:relative;
   margin-bottom: -1.15em;
 }
+.stack-div{
+  margin: 0 0.4rem;
+}
 .stack{
   text-align:center;
   color:white;
+}
+.decision-checkbox-bar{
+  position: absolute;
+  bottom:0%;
+  right:0%;
+}
+.decision-bar{
+  display:flex;
+}
+.decision-button{
+  border-radius: 40px;
+  border: none;
+  background: #24A5F5;
+  width:5rem;
+  padding: 0.2rem 0.2rem;
+  margin: 0.3rem 0.1rem;
+  font-size: 18px;
+  font-family: Arial, Helvetica, sans-serif;
+  color:white;
+}
+.decision-input{
+  border-radius: 40px;
+  border: none;
+  background: #3A3B3C;
+  width:3rem;
+  padding: 0.2rem 0.2rem;
+  margin: 0.3rem 0.1rem;
+  font-size: 18px;
+  font-family: Arial, Helvetica, sans-serif;
+  color:#B0B3B4;
+  text-align:center;
+}
+.decision-slider{
+  color: #24A5F5;
+  background-color: #3A3B3C;
+}
+.decision-form{
+  display:flex;
+}
+.checkbox-bar{
+  display:flex;
+}
+.log{
+  position: absolute;
+  top: 0%;
+  left:0%;
+  background-color:#272729;
+  height: 100%;
+  width:15%;
+  align-items: center;
+}
+.log-text{
+  color:white;
+  text-align: center;
+}
+.log-card{
+  margin: 0.5rem;
+  background-color: #3A3B3C;
+  border-radius:1rem;
 }
 #enter-name{
   width:max(10%,150px);
@@ -227,7 +284,7 @@ button:focus {
   height:30rem;
   width:50vw;
   border-radius:28rem;
-  margin:0 auto;
+  margin:auto;
 }
 #table-inner{
   display:flex;
@@ -253,91 +310,186 @@ button:focus {
   margin: 0 0.2rem;
 }
 #game-div{
-  margin:10rem 0 0 0;
+  margin:auto;
 }
 #seat-2-1{
   position: absolute;
   top:25%;
   right:75%;
 }
+#seat-2-1 .stack-div{
+  position:absolute;
+  top:50%;
+  right:-70%;
+}
 #seat-2-2{
   position: absolute;
   top:25%;
   right:17.5%;
+}
+#seat-2-2 .stack-div{
+  position:absolute;
+  top:50%;
+  right:140%;
 }
 #seat-6-1{
   position: absolute;
   top:85%;
   right:58%;
 }
+#seat-6-1 .stack-div{
+  position:absolute;
+  top:-45%;
+  right:20%;
+}
 #seat-6-2{
   position: absolute;
   top:25%;
-  right:75%;
+  right:78%;
+}
+#seat-6-2 .stack-div{
+  position:absolute;
+  top:50%;
+  right:-70%;
 }
 #seat-6-3{
   position: absolute;
   top:-20%;
   right:58%;
 }
+#seat-6-3 .stack-div{
+  position:absolute;
+  top:115%;
+  right:25%;
+}
 #seat-6-4{
   position: absolute;
   top:-20%;
   right:35%;
+}
+#seat-6-4 .stack-div{
+  position:absolute;
+  top:115%;
+  right:45%;
 }
 #seat-6-5{
   position: absolute;
   top:25%;
   right:17.5%;
 }
+#seat-6-5 .stack-div{
+  position:absolute;
+  top:50%;
+  right:140%;
+}
 #seat-6-6{
   position: absolute;
   top:85%;
   right:35%;
+}
+#seat-6-6 .stack-div{
+  position:absolute;
+  top:-45%;
+  right:50%;
 }
 #seat-9-1{
   position: absolute;
   top:85%;
   right:46%;
 }
+#seat-9-1 .stack-div{
+  position:absolute;
+  top:-45%;
+  right:40%;
+}
 #seat-9-2{
   position: absolute;
   top:80%;
   right:64%;
+}
+#seat-9-2 .stack-div{
+  position:absolute;
+  top:-30%;
+  right:-10%;
 }
 #seat-9-3{
   position: absolute;
   top:45%;
   right:74%;
 }
+#seat-9-3 .stack-div{
+  position:absolute;
+  top:25%;
+  right:-50%;
+}
 #seat-9-4{
   position: absolute;
   top:-4%;
   right:71%;
+}
+#seat-9-4 .stack-div{
+  position:absolute;
+  top:100%;
+  right:-30%;
 }
 #seat-9-5{
   position: absolute;
   top:-20%;
   right:56%;  
 }
+#seat-9-5 .stack-div{
+  position:absolute;
+  top:110%;
+  right:40%;
+}
 #seat-9-6{
   position: absolute;
   top:-20%;
   right:37%;
+}
+#seat-9-6 .stack-div{
+  position:absolute;
+  top:110%;
+  right:40%;
 }
 #seat-9-7{
   position: absolute;
   top:-4%;
   right:21%;
 }
+#seat-9-7 .stack-div{
+  position:absolute;
+  top:100%;
+  right:120%;
+}
 #seat-9-8{
   position: absolute;
   top:45%;
   right:18%;
+}
+#seat-9-8 .stack-div{
+  position:absolute;
+  top:25%;
+  right:135%;
 }
 #seat-9-9{
   position: absolute;
   top:80%;
   right:29%;
 }
+#seat-9-9 .stack-div{
+  position:absolute;
+  top:-30%;
+  right:100%;
+}
+#screen{
+  display:flex;
+  height:100%;
+  align-items: center;
+}
+#play-area{
+  margin-left:15%;
+  width:100vw;
+}
+
 
